test/expected/declare_b_f_i.out
declare b as block returning function returning int
                           ^
28: error: block returning function; did you mean block returning pointer to function?
